--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "crypto-js": "^4.1.1",
+    "email-js": "^2.0.2",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
